--- a/archives/toutiao-search/2024-01-02.md
+++ b/archives/toutiao-search/2024-01-02.md
@@ -1,57 +1,74 @@
 # 2024-01-02
 
-共 127 条
+共 142 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Jan 02 2024 09:44:49 GMT+0800 (China Standard Time) -->
-1. [韩国最大在野党党首李在明遇袭](https://so.toutiao.com/search?keyword=韩国最大在野党党首李在明遇袭)
+<!-- 最后更新时间 Tue Jan 02 2024 10:20:10 GMT+0800 (China Standard Time) -->
 1. [广州电动自行车限行今日开罚](https://so.toutiao.com/search?keyword=广州电动自行车限行今日开罚)
+1. [李在明遇袭现场：行凶人持刀猛刺](https://so.toutiao.com/search?keyword=李在明遇袭现场：行凶人持刀猛刺)
 1. [他们在坚守奋斗中开启新年](https://so.toutiao.com/search?keyword=他们在坚守奋斗中开启新年)
-1. [路边摊麻辣烫一碗106元](https://so.toutiao.com/search?keyword=路边摊麻辣烫一碗106元)
-1. [国足1比2中国香港 38年来首负](https://so.toutiao.com/search?keyword=国足1比2中国香港+38年来首负)
+1. [今年元旦跨年旅行热度同比增近10倍](https://so.toutiao.com/search?keyword=今年元旦跨年旅行热度同比增近10倍)
+1. [伊朗外长会见也门胡塞武装发言人](https://so.toutiao.com/search?keyword=伊朗外长会见也门胡塞武装发言人)
+1. [韩国最大在野党党首李在明遇袭](https://so.toutiao.com/search?keyword=韩国最大在野党党首李在明遇袭)
 1. [广东一乡镇公示8名“躺平休闲人员”](https://so.toutiao.com/search?keyword=广东一乡镇公示8名“躺平休闲人员”)
-1. [成都一小区楼栋门头被认定违建被拆](https://so.toutiao.com/search?keyword=成都一小区楼栋门头被认定违建被拆)
 1. [售价35.98万起 小鹏X9上市](https://so.toutiao.com/search?keyword=售价35.98万起+小鹏X9上市)
-1. [新郎父亲怕新娘冻着为她披上衣服](https://so.toutiao.com/search?keyword=新郎父亲怕新娘冻着为她披上衣服)
-1. [各卫视跨年晚会名场面](https://so.toutiao.com/search?keyword=各卫视跨年晚会名场面)
+1. [元旦假期国内旅游数据出炉](https://so.toutiao.com/search?keyword=元旦假期国内旅游数据出炉)
+1. [国足1比2中国香港 38年来首负](https://so.toutiao.com/search?keyword=国足1比2中国香港+38年来首负)
 1. [日本再次发生最高震度地震？官方修正](https://so.toutiao.com/search?keyword=日本再次发生最高震度地震？官方修正)
 1. [日本强震：迪士尼游客蹲地避难](https://so.toutiao.com/search?keyword=日本强震：迪士尼游客蹲地避难)
 1. [日本一地火山喷发](https://so.toutiao.com/search?keyword=日本一地火山喷发)
 1. [武汉江滩雕塑“一孩变三孩”](https://so.toutiao.com/search?keyword=武汉江滩雕塑“一孩变三孩”)
 1. [日本石川县发生地震 中领馆发提醒](https://so.toutiao.com/search?keyword=日本石川县发生地震+中领馆发提醒)
-1. [网红欧可爱车祸溺水离世](https://so.toutiao.com/search?keyword=网红欧可爱车祸溺水离世)
-1. [黄晓明晒和小海绵拥抱合照](https://so.toutiao.com/search?keyword=黄晓明晒和小海绵拥抱合照)
+1. [路边摊麻辣烫一碗106元](https://so.toutiao.com/search?keyword=路边摊麻辣烫一碗106元)
+1. [元旦假期全国出游1.35亿人次](https://so.toutiao.com/search?keyword=元旦假期全国出游1.35亿人次)
 1. [日本地震不会影响我国沿岸](https://so.toutiao.com/search?keyword=日本地震不会影响我国沿岸)
-1. [跨年晚会收视率](https://so.toutiao.com/search?keyword=跨年晚会收视率)
-1. [面馆员工8个月“顺”走2万余元](https://so.toutiao.com/search?keyword=面馆员工8个月“顺”走2万余元)
-1. [日本强震重灾区轮岛市大量建筑倒塌](https://so.toutiao.com/search?keyword=日本强震重灾区轮岛市大量建筑倒塌)
-1. [范志毅也出现在了《繁花》里](https://so.toutiao.com/search?keyword=范志毅也出现在了《繁花》里)
-1. [胡歌给头条网友送新年祝福](https://so.toutiao.com/search?keyword=胡歌给头条网友送新年祝福)
-1. [日本强震地区发生火灾](https://so.toutiao.com/search?keyword=日本强震地区发生火灾)
-1. [新能源造车2023年成绩单](https://so.toutiao.com/search?keyword=新能源造车2023年成绩单)
-1. [女生误把电焊条当成仙女棒](https://so.toutiao.com/search?keyword=女生误把电焊条当成仙女棒)
-1. [日本石川7.4级地震引发5米海啸](https://so.toutiao.com/search?keyword=日本石川7.4级地震引发5米海啸)
-1. [小土豆翻墙与冰雕合照 朋友看笑了](https://so.toutiao.com/search?keyword=小土豆翻墙与冰雕合照+朋友看笑了)
-1. [美国女子遭家暴报警求助被击毙](https://so.toutiao.com/search?keyword=美国女子遭家暴报警求助被击毙)
-1. [日本华人讲述地震灾情](https://so.toutiao.com/search?keyword=日本华人讲述地震灾情)
+1. [网红欧可爱车祸溺水离世](https://so.toutiao.com/search?keyword=网红欧可爱车祸溺水离世)
 1. [2024年上班第一天](https://so.toutiao.com/search?keyword=2024年上班第一天)
+1. [日本地震已致13人死亡](https://so.toutiao.com/search?keyword=日本地震已致13人死亡)
+1. [北京元旦消费销售客流双增长](https://so.toutiao.com/search?keyword=北京元旦消费销售客流双增长)
+1. [黄晓明晒和小海绵拥抱合照](https://so.toutiao.com/search?keyword=黄晓明晒和小海绵拥抱合照)
+1. [日本强震重灾区轮岛市大量建筑倒塌](https://so.toutiao.com/search?keyword=日本强震重灾区轮岛市大量建筑倒塌)
+1. [元旦北京商场迎来“开门红”](https://so.toutiao.com/search?keyword=元旦北京商场迎来“开门红”)
+1. [新郎父亲怕新娘冻着为她披上衣服](https://so.toutiao.com/search?keyword=新郎父亲怕新娘冻着为她披上衣服)
+1. [日本强震地区发生火灾](https://so.toutiao.com/search?keyword=日本强震地区发生火灾)
+1. [各卫视跨年晚会名场面](https://so.toutiao.com/search?keyword=各卫视跨年晚会名场面)
+1. [面馆员工8个月“顺”走2万余元](https://so.toutiao.com/search?keyword=面馆员工8个月“顺”走2万余元)
+1. [日本石川7.4级地震引发5米海啸](https://so.toutiao.com/search?keyword=日本石川7.4级地震引发5米海啸)
+1. [金正恩对韩国强硬表态释放出何信号](https://so.toutiao.com/search?keyword=金正恩对韩国强硬表态释放出何信号)
+1. [胡歌给头条网友送新年祝福](https://so.toutiao.com/search?keyword=胡歌给头条网友送新年祝福)
+1. [日本华人讲述地震灾情](https://so.toutiao.com/search?keyword=日本华人讲述地震灾情)
+1. [《一闪一闪亮星星》第三天票房暴跌](https://so.toutiao.com/search?keyword=《一闪一闪亮星星》第三天票房暴跌)
+1. [范志毅也出现在了《繁花》里](https://so.toutiao.com/search?keyword=范志毅也出现在了《繁花》里)
+1. [日媒航拍石川县能登地区震后景象](https://so.toutiao.com/search?keyword=日媒航拍石川县能登地区震后景象)
+1. [女生误把电焊条当成仙女棒](https://so.toutiao.com/search?keyword=女生误把电焊条当成仙女棒)
+1. [孟子义叫江苏卫视大哥](https://so.toutiao.com/search?keyword=孟子义叫江苏卫视大哥)
+1. [日本地震致核电站燃料池冷却水溢出](https://so.toutiao.com/search?keyword=日本地震致核电站燃料池冷却水溢出)
+1. [小土豆翻墙与冰雕合照 朋友看笑了](https://so.toutiao.com/search?keyword=小土豆翻墙与冰雕合照+朋友看笑了)
+1. [携程发布2024年元旦报告](https://so.toutiao.com/search?keyword=携程发布2024年元旦报告)
+1. [日本地震后拜登发声：随时准备援助](https://so.toutiao.com/search?keyword=日本地震后拜登发声：随时准备援助)
+1. [美国女子遭家暴报警求助被击毙](https://so.toutiao.com/search?keyword=美国女子遭家暴报警求助被击毙)
+1. [今年国内旅游人数预计将超60亿人次](https://so.toutiao.com/search?keyword=今年国内旅游人数预计将超60亿人次)
+1. [媒体评雕塑“一孩变三孩”](https://so.toutiao.com/search?keyword=媒体评雕塑“一孩变三孩”)
+1. [凤凰传奇高潮一响统一全场](https://so.toutiao.com/search?keyword=凤凰传奇高潮一响统一全场)
+1. [阿根廷总统“教育新政”再引争议](https://so.toutiao.com/search?keyword=阿根廷总统“教育新政”再引争议)
+1. [冰雪经济成元旦消费新增长点](https://so.toutiao.com/search?keyword=冰雪经济成元旦消费新增长点)
+1. [2024年1月8款新车将上市](https://so.toutiao.com/search?keyword=2024年1月8款新车将上市)
+1. [哈马斯跨年夜发动猛烈袭击](https://so.toutiao.com/search?keyword=哈马斯跨年夜发动猛烈袭击)
+1. [成都一小区楼栋门头被认定违建被拆](https://so.toutiao.com/search?keyword=成都一小区楼栋门头被认定违建被拆)
+1. [跨年晚会收视率](https://so.toutiao.com/search?keyword=跨年晚会收视率)
+1. [新能源造车2023年成绩单](https://so.toutiao.com/search?keyword=新能源造车2023年成绩单)
 1. [以色列“强硬表态”能带来什么](https://so.toutiao.com/search?keyword=以色列“强硬表态”能带来什么)
 1. [日本地震已致8人死亡](https://so.toutiao.com/search?keyword=日本地震已致8人死亡)
-1. [凤凰传奇高潮一响统一全场](https://so.toutiao.com/search?keyword=凤凰传奇高潮一响统一全场)
 1. [跨年晚会3大卫视集体“翻车”](https://so.toutiao.com/search?keyword=跨年晚会3大卫视集体“翻车”)
 1. [日气象厅降低能登地区海啸警报级别](https://so.toutiao.com/search?keyword=日气象厅降低能登地区海啸警报级别)
 1. [赵少康辩论会上辞去“中广”董事长](https://so.toutiao.com/search?keyword=赵少康辩论会上辞去“中广”董事长)
 1. [存款利率开启“1”时代](https://so.toutiao.com/search?keyword=存款利率开启“1”时代)
-1. [日本地震致核电站燃料池冷却水溢出](https://so.toutiao.com/search?keyword=日本地震致核电站燃料池冷却水溢出)
-1. [2024年1月8款新车将上市](https://so.toutiao.com/search?keyword=2024年1月8款新车将上市)
 1. [努涅斯进球良机转化率仅21.3%](https://so.toutiao.com/search?keyword=努涅斯进球良机转化率仅21.3%)
 1. [经历日本地震的中国游客谈现场情况](https://so.toutiao.com/search?keyword=经历日本地震的中国游客谈现场情况)
 1. [90后女生抽中了刘强东的越野车](https://so.toutiao.com/search?keyword=90后女生抽中了刘强东的越野车)
 1. [黑龙江感谢游客：把咱们都整不会了](https://so.toutiao.com/search?keyword=黑龙江感谢游客：把咱们都整不会了)
 1. [理想L9和问界M9配置对比](https://so.toutiao.com/search?keyword=理想L9和问界M9配置对比)
 1. [美媒：美国制裁没能阻碍华为发展](https://so.toutiao.com/search?keyword=美媒：美国制裁没能阻碍华为发展)
-1. [哈马斯跨年夜发动猛烈袭击](https://so.toutiao.com/search?keyword=哈马斯跨年夜发动猛烈袭击)
-1. [《一闪一闪亮星星》第三天票房暴跌](https://so.toutiao.com/search?keyword=《一闪一闪亮星星》第三天票房暴跌)
 1. [赵少康辩论会火力惊人猛轰赖清德](https://so.toutiao.com/search?keyword=赵少康辩论会火力惊人猛轰赖清德)
 1. [中信建投：2024年A股或转入小牛市](https://so.toutiao.com/search?keyword=中信建投：2024年A股或转入小牛市)
 1. [无人机表演取消 主办方下跪致歉](https://so.toutiao.com/search?keyword=无人机表演取消+主办方下跪致歉)
@@ -64,9 +81,7 @@
 1. [刘德华为粉丝整理裙摆](https://so.toutiao.com/search?keyword=刘德华为粉丝整理裙摆)
 1. [青岛仓库火灾涉及20号胶标准仓单](https://so.toutiao.com/search?keyword=青岛仓库火灾涉及20号胶标准仓单)
 1. [韩国东海岸地区展开紧急安全管理](https://so.toutiao.com/search?keyword=韩国东海岸地区展开紧急安全管理)
-1. [金正恩对韩国强硬表态释放出何信号](https://so.toutiao.com/search?keyword=金正恩对韩国强硬表态释放出何信号)
 1. [《繁花》剧组亮相东方卫视跨年](https://so.toutiao.com/search?keyword=《繁花》剧组亮相东方卫视跨年)
-1. [孟子义叫江苏卫视大哥](https://so.toutiao.com/search?keyword=孟子义叫江苏卫视大哥)
 1. [5位基金经理分享2024投资锦囊](https://so.toutiao.com/search?keyword=5位基金经理分享2024投资锦囊)
 1. [上海跨年“祈”遇记：撞钟祈福](https://so.toutiao.com/search?keyword=上海跨年“祈”遇记：撞钟祈福)
 1. [全新凯美瑞开启预售 17.38万起](https://so.toutiao.com/search?keyword=全新凯美瑞开启预售+17.38万起)
